SI: Now the username and password are saved to the Database. 1. Using jBCrypt for encrypting/decrypting the password. 2. Added dependency for MySQL jar and jBCrypt jar

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,16 @@
 			<artifactId>jquery</artifactId>
 			<version>1.9.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>de.svenkubiak</groupId>
+		    <artifactId>jBCrypt</artifactId>
+		    <version>0.4.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>8.0.13</version>
+		</dependency>
 	</dependencies>
 
 	<build>
